# AG-Launcher

client/: .gitignore  main.py  manifest.py  pyproject.toml  test.py
client/core/: hypcore.py  hypdownload.py  log.py
client/core/proto/: Sophon.proto  Sophon_pb2.py  Sophon_pb2.pyi
client/core/type/: request.py
client/routers/: get_game_info.py
web/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
web/launcher/: package.json
web/src/: App.vue  main.ts
web/src/components/: SlideShow.vue
web/src/router/: index.ts
web/src/stores/: game.ts
web/src/type/: banners.ts  bg.ts
web/src/utils/: request.ts  ws.ts
web/src/views/: HomeView.vue
